--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -7,7 +7,7 @@
     "faq": "FAQ"
   },
   "hero": {
-    "greeting": "👋 Hi!",
+    "greeting": "Hi!",
     "name": "I'm Miguel Angel",
     "role": "Full Stack Developer",
     "specialties": {
