--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -7,7 +7,7 @@
     "faq": "FAQ"
   },
   "hero": {
-    "greeting": "👋 ¡Hola!",
+    "greeting": "¡Hola!",
     "name": "Soy Miguel Angel",
     "role": "Full Stack Developer",
     "specialties": {
