Mejora en skills

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -19,6 +19,7 @@
   },
   "skill": {
     "title": "Skills",
+    "gadgets": "Gadgets",
     "certificates": {
       "modalUdemy": "Go to certificate"
     }
