--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -19,6 +19,7 @@
   },
   "skill": {
     "title": "Habilidades",
+    "gadgets": "Herramientas",
     "certificates": {
       "modalUdemy": "Ir al certificado"
     }
